Adding custom info window adaptor.

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -60,4 +60,15 @@
         android:scaleType="centerCrop"
         android:src="@drawable/ic_gps" />
 
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@+id/relLayout1"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="15dp"
+        android:scaleType="centerCrop"
+        android:id="@+id/place_info"
+        android:contentDescription="@string/place_autocomplete_search_hint"
+        android:src="@drawable/ic_info"/>
+
 </RelativeLayout>
