--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -11,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MapActivity"
-
         />
 
     <RelativeLayout
@@ -81,5 +80,23 @@
         android:layout_below="@id/place_picker"
         android:src="@drawable/ic_info"
         />
+
+    <Button
+        android:id="@+id/share_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="27dp"
+        android:elevation="20dp"
+        android:text="ShareRide"
+        android:backgroundTint="#689f38"
+        android:textColor="#ffffff"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        android:padding="15dp"
+        android:fontFamily="sans-serif-condensed"
+        />
+
 
 </RelativeLayout>
